--- a/argocd/docker-repo-secret.yml
+++ b/argocd/docker-repo-secret.yml
@@ -5,7 +5,7 @@ kind: Secret
 metadata:
   creationTimestamp: "2025-01-14T13:38:33Z"
   name: myrepo
-  namespace: default
+  namespace: gardentest-rich
   resourceVersion: "171242"
   uid: e651350e-f694-4e03-9b97-d5e8f0f5e27c
 type: kubernetes.io/dockerconfigjson
