--- a/argocd/create-development-namespace.yml
+++ b/argocd/create-development-namespace.yml
@@ -2,3 +2,5 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: development
+  annotations:
+    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
