added sync wave 0

--- a/argocd/deploy-rabbitmq.yml
+++ b/argocd/deploy-rabbitmq.yml
@@ -5,6 +5,7 @@ metadata:
   namespace: gardentest-rich
   annotations:
     argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
+    argocd.argoproj.io/sync-wave: "0"
 
 spec:
   replicas: 1
