--- a/argocd/gardentest-cert.yml
+++ b/argocd/gardentest-cert.yml
@@ -5,7 +5,7 @@ metadata:
   namespace: gardentest-rich
   annotations:
     argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
-  
+    argocd.argoproj.io/sync-wave: "0"
 spec:
   secretName: gardentest-tls-secret
   issuerRef:
