--- a/argocd/deploy-mssql-server.yml
+++ b/argocd/deploy-mssql-server.yml
@@ -6,6 +6,10 @@ metadata:
   namespace: gardentest-rich
   labels:
     app: mssql
+  annotations:
+    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
+    argocd.argoproj.io/sync-wave: "1"
+
 spec:
   selector:
     matchLabels:
