--- a/argocd/deploy-webapp.yml
+++ b/argocd/deploy-webapp.yml
@@ -3,6 +3,10 @@ kind: Deployment
 metadata:
   name: webportal
   namespace: gardentest-rich
+  annotations:
+    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
+    argocd.argoproj.io/sync-wave: "1"
+
 spec:
   replicas: 1
   selector:
