--- a/argocd/docker-repo-secret.yml
+++ b/argocd/docker-repo-secret.yml
@@ -5,4 +5,8 @@ kind: Secret
 metadata:
   name: myrepo
   namespace: gardentest-rich  
+  annotations:
+    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
+    argocd.argoproj.io/sync-wave: "1"
+
 type: kubernetes.io/dockerconfigjson
