--- a/argocd/gardentest-ca-secret.yml
+++ b/argocd/gardentest-ca-secret.yml
@@ -1,6 +1,9 @@
 apiVersion: v1
 kind: Secret
 metadata:
+  annotations:
+    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
+    argocd.argoproj.io/sync-wave: "1"  
   name: gardentest-ca-secret
   namespace: cert-manager
   type: Opaque
