--- a/argocd/gardentest-clusterissuer.yml
+++ b/argocd/gardentest-clusterissuer.yml
@@ -2,6 +2,10 @@ apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
   name: gardentest-clusterissuer
+  annotations:
+    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
+    argocd.argoproj.io/sync-wave: "1"
+
 spec:
   ca:
     secretName: gardentest-ca-secret
