changed ingress to sync 2

--- a/argocd/deploy-nginx-ingress.yml
+++ b/argocd/deploy-nginx-ingress.yml
@@ -3,6 +3,9 @@ kind: Ingress
 metadata:
   name: host-based-ingress
   annotations:
+    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
+    argocd.argoproj.io/sync-wave: "2"
+ 
     kubernetes.io/ingress.class: "nginx"
  #         nginx.ingress.kubernetes.io/ssl-redirect: "false"
  #         nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
