--- a/argocd/gardentest-cert.yml
+++ b/argocd/gardentest-cert.yml
@@ -7,7 +7,7 @@ metadata:
     argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
     argocd.argoproj.io/sync-wave: "2"
 spec:
-  secretName: gardentest-ca-secret
+  secretName: gardentest-tls-secret
   issuerRef:
     name: gardentest-clusterissuer
     kind: ClusterIssuer
