--- a/argocd/deploy-nginx-ingress.yml
+++ b/argocd/deploy-nginx-ingress.yml
@@ -2,6 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: host-based-ingress
+  namespace: gardentest-rich
   annotations:
     argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
     argocd.argoproj.io/sync-wave: "3"
