--- a/argocd/deploy-nginx-ingress.yml
+++ b/argocd/deploy-nginx-ingress.yml
@@ -7,12 +7,13 @@ metadata:
     argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
     argocd.argoproj.io/sync-wave: "3"
  
-    kubernetes.io/ingress.class: "nginx"
+ #   kubernetes.io/ingress.class: "nginx"
  #         nginx.ingress.kubernetes.io/ssl-redirect: "false"
  #         nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
  #         nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
 
 spec:
+  ingressClassName: nginx
   rules:
     - host: web.gardentest.dev
       http:
