--- a/infrastructure/apps/cert-manager.yml
+++ b/infrastructure/apps/cert-manager.yml
@@ -8,7 +8,7 @@ metadata:
 spec:
   project: default
   source:
-    repoUrl: https://charts.jetstack.io
+    repoURL: https://charts.jetstack.io
     chart: cert-manager
     targetRevision: 'v1.11.0'
     helm:
