--- a/demo-app/deploy-nginx-ingress.yml
+++ b/demo-app/deploy-nginx-ingress.yml
@@ -3,14 +3,16 @@ kind: Ingress
 metadata:
   name: host-based-ingress
   namespace: gardentest-rich
+  
   annotations:
     argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
     argocd.argoproj.io/sync-wave: "3"
- 
+    cert-manager.io/issuer: test-ca-issuer
  #   kubernetes.io/ingress.class: "nginx"
  #         nginx.ingress.kubernetes.io/ssl-redirect: "false"
  #         nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
  #         nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
+  
 
 spec:
   ingressClassName: nginx
