--- a/demo-app/gardentest-cert.yml
+++ b/demo-app/gardentest-cert.yml
@@ -1,16 +1,16 @@
-apiVersion: cert-manager.io/v1
-kind: Certificate
-metadata:
-  name: gardentest-cert
-  namespace: gardentest-rich
-  annotations:
-    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
-    argocd.argoproj.io/sync-wave: "2"
-spec:
-  secretName: gardentest-tls-secret
-  issuerRef:
-    name: gardentest-clusterissuer
-    kind: ClusterIssuer
-  dnsNames:
-    - web.gardentest.dev
-    - consumer.gardentest.dev
+#apiVersion: cert-manager.io/v1
+#kind: Certificate
+#metadata:
+#  name: gardentest-cert
+#  namespace: gardentest-rich
+#  annotations:
+#    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
+#    argocd.argoproj.io/sync-wave: "2"
+#spec:
+#  secretName: gardentest-tls-secret
+#  issuerRef:
+#    name: gardentest-clusterissuer
+#    kind: ClusterIssuer
+#  dnsNames:
+#    - web.gardentest.dev
+#    - consumer.gardentest.dev
