--- a/demo-app/deploy-nginx-ingress.yml
+++ b/demo-app/deploy-nginx-ingress.yml
@@ -37,11 +37,11 @@ spec:
                 name: consumerportal-svc
                 port:
                   number: 80                      
-#'tls:
-#    - hosts:
-#      - web.gardentest.dev
-#      - consumer.gardentest.dev
-#      secretName: gardentest-tls-secret
+  tls:
+    - hosts:
+      - web.gardentest.dev
+      - consumer.gardentest.dev
+      secretName: test-server-tls
             
             
             
