--- a/demo-app/cert-manager-ss-issuer.yml
+++ b/demo-app/cert-manager-ss-issuer.yml
@@ -1,8 +1,8 @@
-#apiVersion: cert-manager.io/v1
-#kind: issuer
-#metadata:
-#  name: selfsigned-issuer
-#  namespace: gardentest-rich
-#spec:
-#  selfSigned: {}
+apiVersion: cert-manager.io/v1
+kind: issuer
+metadata:
+  name: selfsigned-issuer
+  namespace: gardentest-rich
+spec:
+  selfSigned: {}
     
