--- a/demo-app/test-server-cert.yml
+++ b/demo-app/test-server-cert.yml
@@ -1,20 +1,20 @@
-#apiVersion: cert-manager.io/v1
-#kind: Certificate
-#metadata:
-#  name: test-server
-#  namespace: gardentest-rich
-#spec:
-#  secretName: test-server-tls
-#  isCA: false
-#  usages:
-#    - server auth
-#    - client auth
-#  dnsNames:
-#  - "web.gardentest.dev"
-#  - "consumer.gardentest.dev"
-#  
-#  issuerRef:
-#    name: test-ca-issuer
+apiVersion: cert-manager.io/v1
+kind: Certificate
+metadata:
+  name: test-server
+  namespace: gardentest-rich
+spec:
+  secretName: test-server-tls
+  isCA: false
+  usages:
+    - server auth
+    - client auth
+  dnsNames:
+  - "web.gardentest.dev"
+  - "consumer.gardentest.dev"
+  
+  issuerRef:
+    name: test-ca-issuer
 
 
   
