changed back to clusterip, and added nginx deployment

--- a/demo-app/deploy-consumerapp1.yml
+++ b/demo-app/deploy-consumerapp1.yml
@@ -45,7 +45,7 @@ metadata:
   name: consumerportal-svc
   namespace: gardentest-rich
 spec:
-  type: LoadBalancer
+  type: ClusterIP
   ports:
     - name: consumerportal-svc
       port: 80
