--- a/demo-app/deploy-webapp.yml
+++ b/demo-app/deploy-webapp.yml
@@ -45,7 +45,7 @@ metadata:
   name: webportal-svc
   namespace: gardentest-rich
 spec:
-  type: LoadBalancer
+  type: ClusterIP
   ports:
     - name: webportal-svc
       port: 80
