--- a/infrastructure/apps/demo-app.yml
+++ b/infrastructure/apps/demo-app.yml
@@ -6,6 +6,9 @@ metadata:
   namespace: argocd
   #finalizers:
   #  - resources-finalizer.argocd.agoproj.io
+  annotations:
+    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
+    argocd.argoproj.io/sync-wave: "2"    
 spec:
   project: default
   source:
