amended providers to include helm for kubectl. added depends_on for argocd to wait for cluster changed apps to be in-cluster, rather than referencing a different clust

--- a/infrastructure/apps/cert-manager.yml
+++ b/infrastructure/apps/cert-manager.yml
@@ -20,7 +20,7 @@ spec:
           value: 'true'
   destination:
     namespace: cert-manager
-    name: kind
+    name: "in-cluster"
   syncPolicy:
     automated: {}
     syncOptions:
