--- a/infrastructure/apps/demo-app.yml
+++ b/infrastructure/apps/demo-app.yml
@@ -1,30 +1,30 @@
 ---
-#apiVersion: argoproj.io/v1alpha1
-#kind: Application
-#metadata:
-#  name: my-app
-#  namespace: argocd
-#  #finalizers:
-#  #  - resources-finalizer.argocd.agoproj.io
-#  annotations:
-#    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
-#    argocd.argoproj.io/sync-wave: "2"    
-#spec:
-#  project: default
-#  source:
-#    repoURL: https://github.com/djqdos/gardentest-argo.git
-#    targetRevision: HEAD
-#    path: "demo-app"
-#  destination:
-#    namespace: gardentest-rich
-#    name: "in-cluster"
-#  syncPolicy:
-#    automated:
-#      prune: true
-#      selfHeal: true
-#      allowEmpty: false
-#    syncOptions:
-#      - Validate=true
-#      - CreateNamespace=false
-#      - PrunePropagationPolicy=foreground
-#      - PruneLast=true
+apiVersion: argoproj.io/v1alpha1
+kind: Application
+metadata:
+  name: my-app
+  namespace: argocd
+  #finalizers:
+  #  - resources-finalizer.argocd.agoproj.io
+  annotations:
+    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
+    argocd.argoproj.io/sync-wave: "2"    
+spec:
+  project: default
+  source:
+    repoURL: https://github.com/djqdos/gardentest-argo.git
+    targetRevision: HEAD
+    path: "demo-app"
+  destination:
+    namespace: gardentest-rich
+    name: "in-cluster"
+  syncPolicy:
+    automated:
+      prune: true
+      selfHeal: true
+      allowEmpty: false
+    syncOptions:
+      - Validate=true
+      - CreateNamespace=false
+      - PrunePropagationPolicy=foreground
+      - PruneLast=true
