--- a/demo-app/deploy-nginx.yml
+++ b/demo-app/deploy-nginx.yml
@@ -1,48 +1,48 @@
-apiVersion: v1
-kind: Service
-metadata:
-  name: nginx-controller
-  annotations:
-    meta.helm.sh/release-name: garden-nginx
-    meta.helm.sh/release-namespace: gardentest-rich
-  labels:
-    app.kubernetes.io/component: controller
-    app.kubernetes.io/instance: garden-nginx
-    app.kubernetes.io/managed-by: Helm
-    app.kubernetes.io/name: ingress-nginx
-    app.kubernetes.io/version: 1.1.0
-    helm.sh/chart: ingress-nginx-4.0.13
-  namespace: gardentest-rich
-spec:
-  allocateLoadBalancerNodePorts: true
-  clusterIP: 10.101.184.245
-  clusterIPs:
-  - 10.101.184.245
-  externalTrafficPolicy: Cluster
-  internalTrafficPolicy: Cluster
-  ipFamilies:
-  - IPv4
-  ports:
-  - appProtocol: http
-    name: http
-    nodePort: 31458
-    port: 80
-    protocol: TCP
-    targetPort: http
-  - appProtocol: https
-    name: https
-    nodePort: 31430
-    port: 443
-    protocol: TCP
-    targetPort: https
-  selector:
-    app.kubernetes.io/component: controller
-    app.kubernetes.io/instance: garden-nginx
-    app.kubernetes.io/name: ingress-nginx
-  sessionAffinity: None
-  type: LoadBalancer
-status:
-  loadBalancer:
-    ingress:
-    - hostname: localhost
+#apiVersion: v1
+#kind: Service
+#metadata:
+#  name: nginx-controller
+#  annotations:
+#    meta.helm.sh/release-name: garden-nginx
+#    meta.helm.sh/release-namespace: gardentest-rich
+#  labels:
+#    app.kubernetes.io/component: controller
+#    app.kubernetes.io/instance: garden-nginx
+#    app.kubernetes.io/managed-by: Helm
+#    app.kubernetes.io/name: ingress-nginx
+#    app.kubernetes.io/version: 1.1.0
+#    helm.sh/chart: ingress-nginx-4.0.13
+#  namespace: gardentest-rich
+#spec:
+#  allocateLoadBalancerNodePorts: true
+#  clusterIP: 10.101.184.245
+#  clusterIPs:
+#  - 10.101.184.245
+#  externalTrafficPolicy: Cluster
+#  internalTrafficPolicy: Cluster
+#  ipFamilies:
+#  - IPv4
+#  ports:
+#  - appProtocol: http
+#    name: http
+#    nodePort: 31458
+#    port: 80
+#    protocol: TCP
+#    targetPort: http
+#  - appProtocol: https
+#    name: https
+#    nodePort: 31430
+#    port: 443
+#    protocol: TCP
+#    targetPort: https
+#  selector:
+#    app.kubernetes.io/component: controller
+#    app.kubernetes.io/instance: garden-nginx
+#    app.kubernetes.io/name: ingress-nginx
+#  sessionAffinity: None
+#  type: LoadBalancer
+#status:
+#  loadBalancer:
+#    ingress:
+#    - hostname: localhost
 
