--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,8 @@ infrastructure/terraform/.terraform/providers/registry.terraform.io/hashicorp/az
 infrastructure/terraform/.terraform/providers/registry.terraform.io/hashicorp/helm/2.17.0/windows_amd64/LICENSE.txt
 infrastructure/terraform/.terraform/providers/registry.terraform.io/hashicorp/helm/2.17.0/windows_amd64/terraform-provider-helm_v2.17.0_x5.exe
 infrastructure/terraform/.terraform.lock.hcl
+infrastructure/terraform/.terraform/providers/registry.terraform.io/hashicorp/azurerm/4.18.0/windows_amd64/LICENSE.txt
+infrastructure/terraform/.terraform/providers/registry.terraform.io/hashicorp/azurerm/4.18.0/windows_amd64/terraform-provider-azurerm_v4.18.0_x5.exe
+infrastructure/terraform/.terraform/providers/registry.terraform.io/hashicorp/kubernetes/2.35.1/windows_amd64/LICENSE.txt
+infrastructure/terraform/.terraform/providers/registry.terraform.io/hashicorp/kubernetes/2.35.1/windows_amd64/terraform-provider-kubernetes_v2.35.1_x5.exe
+infrastructure/terraform/.terraform.tfstate.lock.info
