updated nginx repo url

--- a/infrastructure-local/apps/nginx.yml
+++ b/infrastructure-local/apps/nginx.yml
@@ -11,7 +11,7 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: registry-1.docker.io/bitnamicharts
+    repoURL: https://charts.bitnami.com/bitnami
     chart: nginx
     targetRevision: 'v18.3.6'
     helm:
