--- a/infrastructure-local/apps/vault.yml
+++ b/infrastructure-local/apps/vault.yml
@@ -14,6 +14,10 @@ spec:
     repoURL: https://helm.releases.hashicorp.com
     chart: vault
     targetRevision: 'v0.29.1'
+    lifecycle:
+      postStart:
+        exec:
+          command: ["/bin/bash", "-c", "vault operator init"]
     helm:
       parameters:
         - name: installCRDs
