--- a/demo-app/install-nginx.yml
+++ b/demo-app/install-nginx.yml
@@ -1,13 +1,13 @@
-apiVersion: argoproj.io/v1alpha1
-kind: Application
-metadata:
-  name: nginx
-spec:
-  project: default
-  source:
-    chart: nginx
-    repoURL: registry-1.docker.io/bitnamicharts  # note: the oci:// syntax is not included.
-    targetRevision: 15.9.0
-  destination:
-    name: "kind"
-    namespace: nginx
+# apiVersion: argoproj.io/v1alpha1
+# kind: Application
+# metadata:
+#   name: nginx
+# spec:
+#   project: default
+#   source:
+#     chart: nginx
+#     repoURL: registry-1.docker.io/bitnamicharts  # note: the oci:// syntax is not included.
+#     targetRevision: 15.9.0
+#   destination:
+#     name: "kind"
+#     namespace: nginx
